{
    "name": "InputController",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "f28b995e-dff6-45a8-ad58-39002dbb4165",
            "actions": [
                {
                    "name": "MoveDirection",
                    "type": "Value",
                    "id": "0839f62e-cc59-4330-a3ae-af3d6ce290b0",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a375ebcc-3645-4c68-9f78-fb1b6569e767",
                    "path": "<AndroidJoystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SpecialAbility",
            "id": "3f622df3-3520-4197-8318-5abbab007128",
            "actions": [
                {
                    "name": "UseSpecialAbility",
                    "type": "Button",
                    "id": "e2fa195a-4c2e-4cff-94de-6ce421483b5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ece8c00-d56b-424b-a66c-420455e97611",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseSpecialAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}